--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
@@ -66,14 +67,18 @@
           </div>
         </div>
       </nav>
- <div>
-  <img src="./img/banner-2.jpg" height="500" width="1280" alt="">
-  <h1 id="centered">About Us</h1>
-  <p id="centered2">Belding years moveth earth green behold wherein<a id="mar" href="index.html">home</a></p> 
- </div>
+      <div>
+
+        <div class="bg10">
+           <h1 id="text"> About</h1>
+           <p id="text1">  Belding years moveth earth green behold wherein</p> 
+           <a href="index.html" id="text3">Home/About</a>
+           
+        </div>
+        </div>
 
         <br>
-  
+
       <br><br>
       <div class="row">
         <div class="col md-6"><img src="./img/about1.png" alt=""></div>
